--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section class="container">
       <form id="my-form">
-        <h1>Enter User Details</h1>
+        <h1>Enter Your Details</h1>
         <div class="msg"></div>
         <div>
           <label for="name">Name:</label>
@@ -23,6 +23,10 @@
         <div>
           <label for="email">Email:</label>
           <input type="text" id="email">
+        </div>
+        <div>
+          <label for="email">Phone no:</label>
+          <input type="text" id="phone">
         </div>
         <input class="btn" type="submit" value="Submit">
       </form>
@@ -35,7 +39,7 @@
       </ul>
     </section>
     
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
